Closed
Bug 607900
Opened 14 years ago
Closed 14 years ago
[startup-notification] Two windows started when Firefox launched for the first times
Categories
(Firefox :: General, defect, P4)
Tracking
()
RESOLVED
FIXED
Firefox 4.0
People
(Reporter: vicky.sun, Assigned: ginnchen+exoracle)
Details
Attachments
(2 files)
196.77 KB,
image/png
|
Details | |
3.61 KB,
patch
|
benjamin
:
review+
glandium
:
superreview+
beltzner
:
approval2.0+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (X11; U; SunOS i86pc; en-US; rv:1.9.2.12) Gecko/20101027 Firefox/3.6.12
Steps to reproduce:
1. Remove .mozilla
2. Launch FF3.6.12 from menu (not terminal)
Actual Result:
Two windows appear in panel: "Welcome to Firefox..." and "Starting Firefox Web Browser"
For screenshot,please refer to attachment
Expected Result:
Only "Welcome to Firefox..." should be started
If $/.mozilla is not there, we do LaunchChild() in ImportProfiles().
But we didn't set DESKTOP_STARTUP_ID in this path.
We might want to always set DESKTOP_STARUP_ID again, and unset it when Firefox is really started.
Summary: Two windows started when Firefox launched for the first times → [startup-notification] Two windows started when Firefox launched for the first times
See also Bug 416053, Bug 534845
Updated•14 years ago
|
Attachment #493652 -
Flags: review?(benjamin) → review+
Comment on attachment 493652 [details] [diff] [review]
patch
low risk, actually startupid is not used without --enable-startup-notification
Attachment #493652 -
Flags: approval2.0?
Comment 5•14 years ago
|
||
Comment on attachment 493652 [details] [diff] [review]
patch
But is that flag used by any Linux distros?
Comment 6•14 years ago
|
||
Comment on attachment 493652 [details] [diff] [review]
patch
Clearing flag; Ginn, renominate if you have an answer for the previous comment.
Attachment #493652 -
Flags: approval2.0?
Comment on attachment 493652 [details] [diff] [review]
patch
Firefox in Ubuntu 10.10 uses --enable-startup-notification.
Attachment #493652 -
Flags: approval2.0?
Comment 8•14 years ago
|
||
Comment on attachment 493652 [details] [diff] [review]
patch
I'd like to get glandium's sign off on this, then.
Attachment #493652 -
Flags: superreview?(mh+mozilla)
Comment 9•14 years ago
|
||
Comment on attachment 493652 [details] [diff] [review]
patch
I can reproduce the issue on Debian (we do use --enable-startup-notification on our builds), and I can confirm the patch fixes it.
Note that there is another related issue that the patch doesn't fix (and that I hadn't noticed before): when you have several profiles in $HOME/.mozilla/firefox, and uncheck the "Don't ask at startup" box, the "waiting icon" is displayed while being in the profile manager.
Attachment #493652 -
Flags: superreview?(mh+mozilla) → superreview+
Assignee | ||
Comment 10•14 years ago
|
||
That is a different problem.
We don't set startup id for the profile manager dialog.
Comment 11•14 years ago
|
||
Comment on attachment 493652 [details] [diff] [review]
patch
a=beltzner
Attachment #493652 -
Flags: approval2.0? → approval2.0+
Assignee | ||
Comment 12•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 4.0
You need to log in
before you can comment on or make changes to this bug.
Description
•