Bug 607900 [startup-notification] Restore DESKTOP_STARTUP_ID if a restart is required r=benjamin sr=glandium a=beltzner